syntax = "proto3";
package schema;

message TestSchema {
    string field1 = 1;
    lakjsd field2 = 2;
}
